<resources>
    <string name="app_name">MILYTALK</string>
    <string name="version_name">0.7.6</string>
    <string name="version_code">123</string>
    <string name="version_text">Version 0.7.6(123) build 01102014</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="SIGN_UP">REGISTER</string>
    <string name="forgot_password"><u>forgot password?</u></string>
    <string name="WALL">DASHBOARD</string>
    <string name="CAMERA">CAMERA</string>
    <string name="GALLERY">GALLERY</string>
    <string name="SAVE">SAVE</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="REMOVE_PHOTO">REMOVE PHOTO</string>
    <string name="CREATE">CREATE</string>
    <string name="ACCOUNT">ACCOUNT</string>
    <string name="NOTIFICATIONS">NOTIFICATIONS</string>
    <string name="BACK">BACK</string>
    <string name="users">Contacts</string>
    <string name="groups">Groups</string>
    <string name="profile">My Profile</string>
    <string name="information">News</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="SEARCH">SEARCH</string>
    <string name="private_wall">Private Wall</string>
    <string name="NEW_GROUP">NEW GROUP</string>
    <string name="SEND">SEND</string>
    <string name="USE_PHOTO">USE PHOTO</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="current_password">Enter current password</string>
    <string name="new_password">Enter new password</string>
    <string name="new_password_again">Re-enter new password</string>
    <string name="description">Description</string>
    <string name="username">Username</string>
    <string name="group_name">Group Name</string>
    <string name="USERNAME">USERNAME:</string>
    <string name="GROUP_NAME">GROUP NAME:</string>
    <string name="NAME">NAME:</string>
    <string name="PASSWORD">PASSWORD:</string>
    <string name="email">Email</string>
    <string name="GROUP">GROUP</string>
    <string name="GROUPS">GROUPS</string>
    <string name="USERS">USERS</string>
    <string name="MY_PROFILE">MY PROFILE</string>
    <string name="PROFILE">PROFILE</string>
    <string name="CROP_IMAGE">CROP IMAGE</string>
    <string name="PHOTO">PHOTO</string>
    <string name="LOCATION">LOCATION</string>
    <string name="CHANGE_PASSWORD">CHANGE PASSWORD</string>
    <string name="ADD_PASSWORD">ADD PASSWORD</string>
    <string name="DELETE">DELETE</string>
    <string name="ADD_CONTACT">ADD TO CONTACTS</string>
    <string name="REMOVE_CONTACT">REMOVE FROM CONTACTS</string>
    <string name="LAST_LOGIN">LAST LOGIN:</string>
    <string name="ABOUT">ABOUT ME:</string>
    <string name="BIRTHDAY">BIRTHDAY:</string>
    <string name="GENDER">GENDER:</string>
    <string name="GROUP_OWNER">GROUP OWNER:</string>
    <string name="DESCRIPTION">DESCRIPTION:</string>
    <string name="no_valid_email_password">Wrong email and/or password</string>
    <string name="user_already_exists">You already registered. Please signin to continue</string>
    <string name="no_user_registered">No user registered with this email. Please sign up</string>
    <string name="no_email_password">No email and/or password supplied</string>
    <string name="contact_added">Contact added</string>
    <string name="contact_removed">Contact removed</string>
    <string name="failed_to_update_contacts">Failed to update contacts</string>
    <string name="group_updated">Group updated</string>
    <string name="failed_to_update_group">Failed to update group</string>
    <string name="group_deleted">Group deleted</string>
    <string name="failed_to_delete_group">Failed to delete group</string>
    <string name="ADD_TO_FAVORITES">SUBSCRIBE</string>
    <string name="REMOVE_FROM_FAVORITES">UNSUBSCRIBE</string>
    <string name="group_added">Group added</string>
    <string name="group_removes">Group removed</string>
    <string name="posted_less_than_a_minute_ago">Posted less than a minute ago by</string>
    <string name="posted">Posted</string>
    <string name="posted_by">Posted by</string>
    <string name="day_ago">day ago by</string>
    <string name="days_ago">days ago by</string>
    <string name="hour_ago">hour ago by</string>
    <string name="hours_ago">hours ago by</string>
    <string name="minute_ago">minute ago by</string>
    <string name="minutes_ago">minutes ago by</string>
    <string name="SEARCH_TERM">SEARCH TERM</string>
    <string name="create">CREATE</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="emoji">Emoji</string>
    <string name="location">Location</string>
    <string name="record">Record</string>
    <string name="MAIN_TITLE"><b>MILYTALK™</b></string>
    <string name="MAIN_MENU">MAIN MENU</string>
    <string name="about">about</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Not Sure</item>
    </string-array>
    <string name="birthday">birthday</string>
    <string name="when_is_your_birthday">When is your birthday?</string>
    <string name="hookup_date_format">MMM dd, yyyy</string>
    <string name="hookup_date_time_format">MMM dd, HH:mm</string>
    <string name="loading">PLEASE WAIT..</string>
    <string name="RECENT_ACTIVITY">MILYTALK™ MESSENGGER</string>
    <string name="CHAT_ACTIVITY">CHAT ACTIVITY</string>
    <string name="GROUPS_ACTIVITY">GROUPS ACTIVITY</string>
    <string name="USERS_ACTIVITY">USERS ACTIVITY</string>
    <string name="INFORMATION">NEWS</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="delete_group_message">Are you sure you want to delete this group?</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="NO_INTERNET_CONNECTION">NO INTERNET CONNECTION</string>
    <string name="can_not_connect_to_server">Server under maintainence,\nPlease try again later</string>
    <string name="json_error">Sorry, Our server got overload.\nPlease try again</string>
    <string name="an_internal_error_has_occurred">An internal error has occurred. (%1$s)</string>
    <string name="token_expired_error">Token has expired.\nPlease login again.</string>
    <string name="exit_app_message">Are you sure you want to exit MILYTALK™?</string>
    <string name="please_enter_server_url">PLEASE ENTER CHANNEL URL</string>
    <string name="please_enter_passcode">PLEASE ENTER CURRENT PASSCODE</string>
    <string name="please_enter_new_passcode">PLEASE ENTER NEW PASSCODE</string>
    <string name="please_enter_new_passcode_again">PLEASE ENTER NEW PASSCODE AGAIN</string>
    <string name="server_url_hint">This is developer option</string>
    <string name="CLEAR_CACHE">CLEAR CACHE</string>
    <string name="passcode_protect">PASSCODE PROTECT</string>
    <string name="clear_cache_message">Are you sure you want to clear all cache?</string>
    <string name="FAIL">FAIL</string>
    <string name="SUCCESS">SUCCESS</string>
    <string name="EDIT">EDIT</string>
    <string name="SHOW">SHOW</string>
    <string name="devnotes">CAUTION! OPTIONS AVAILABLE HERE IS INTENDED FOR DEVELOPER USE. ADA FAHAM?</string>
    <string-array name="online_status">
        <item>Online</item>
        <item>Away</item>
        <item>Busy</item>
        <item>Offline</item>
    </string-array>
    <string name="online">online</string>
    <string name="away">away</string>
    <string name="busy">busy</string>
    <string name="offline">offline</string>
    <string name="tap_to_add_birthday">Tap to add birthday</string>
    <string name="tap_to_add_gender">Tap to add gender</string>
    <string name="tap_to_add_description">Tap to add description</string>
    <string name="tap_to_add_online_status">Tap to add status</string>
    <string name="tap_to_add_group_name">Tap to add group name</string>
    <string name="tap_to_add_password">Tap to add password</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="no_users">No contacts!</string>
    <string name="SEND_PASSWORD">SEND PASSWORD</string>
    <string name="FORGOT_PASSWORD">SEND PASSWORD</string>
    <string name="send_password">Send password to: </string>
    <string name="confirm_email">For security matter, We\'ve send reset password link to your registered e-mail account.</string>
    <string name="USER">CONTACT</string>
    <string name="my_contacts">My Contacts</string>
    <string name="favorite_groups">Favorite groups</string>
    <string name="create_group">Create group</string>
    <string name="search_name_hint">Type name...</string>
    <string name="EXPLORE">EXPLORE</string>
    <string name="explore">Explore</string>
    <string name="pick_age_hint">Slide to select age...</string>
    <string name="all">all</string>
    <string name="no_users_found">No users found</string>
    <string name="no_groups_found">No groups found</string>
    <string name="no_users_in_contacts">No users in my contacts</string>
    <string name="no_groups_in_favorites">No groups in favorites</string>
    <string name="no_wall_messages">No messages yet</string>
    <string name="MY_CONTACTS">MY CONTACTS</string>
    <string name="FAVORITE_GROUPS">FAVORITE GROUPS</string>
    <string name="ONLINE_STATUS">ONLINE STATUS:</string>
    <string name="SHOW_PASSWORD">SHOW PASSWORD:</string>
    <string name="EMAIL">EMAIL:</string>
    <string name="categories">Categories</string>
    <string name="CATEGORIES">CATEGORIES</string>
    <string name="CATEGORY">CATEGORY:</string>
    <string name="password_error_number_of_characters">Password should contain at least 6 characters in length</string>
    <string name="password_error_invalid_characters">Password should contain only alpha-numeric characters</string>
    <string name="password_ok">Password OK</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="email_length">Email is required</string>
    <string name="max_contacts_alert">You have already added maximum number of contacts</string>
    <string name="max_favorites_alert">You have already added maximum number of favorite groups</string>
    <string name="name_error">Name should contain more than 1(one) character.</string>
    <string name="name_ok">Name OK</string>
    <string name="no_camera">Camera not detected!</string>
    <string name="username_and_email_taken">You already registered.</string>
    <string name="username_taken">Username has been taken. Please try another</string>
    <string name="email_taken">Email account already registered. Please sign in.</string>
    <string name="email_notexists">Email does not exist, Please register to continue</string>
    <string name="groupname_taken">Group name already taken. Please choose another</string>
    <string name="email_sent">Password sent to your registered email address!</string>
    <string name="exceed_video_duration">Video should be less than 30 seconds</string>
    <string name="exceed_voice_duration">Voice should be less than 3 minutes</string>
    <string name="my_groups">My Groups</string>
    <string name="add_group">Add Group</string>
    <string name="FAVORITES">FAVORITES</string>
    <string name="this_group_is_deleted_please_unsubscribe">This group is deleted by it\'s owner. Please unsubscribe if you are subscribed.</string>
    <string name="this_group_is_deleted">This group is deleted by it\'s owner.</string>
    <string name="CLOSE">CLOSE</string>
    <string name="invalid_token_message">Token has expired.\nPlease login again.</string>
</resources>