<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/splash"
    tools:context=".MainActivity" >

<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">
    <RelativeLayout
        android:id="@+id/rlServerField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
	>
	
	<TextView
	    android:text="@string/MAIN_TITLE"
	    android:textSize="60sp"
	    android:textColor="#c0392b"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textStyle="bold"
	    android:gravity="center"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	/>

        <ImageView
            android:id="@+id/ivServerIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/icon_server"
	    android:visibility="invisible"/>

        <com.myrippleapps.borak.view.SimpleAutoFitTextView
            android:id="@+id/tvServerSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ivServerIcon"
            android:layout_toLeftOf="@+id/ivArrowIcon"
            android:background="@null"
            android:singleLine="true"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
	    android:visibility="invisible"/>

        <ImageView
            android:id="@+id/ivArrowIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/icon_server_select"
	    android:visibility="invisible"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rlSignInTitle"
        android:layout_width="match_parent"
        android:layout_height="36dp"
	android:layout_below="@+id/rlServerField"
	android:layout_marginLeft="20dp"
	android:layout_marginRight="20dp"
	android:layout_marginBottom="0dp"
        android:background="@drawable/top_rect" >

        <com.myrippleapps.borak.view.MyriadProTextView
            android:id="@+id/tvSignInTitle"
	    android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/SIGN_IN"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="85dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/negativeleftrect"
            android:gravity="center"
            android:text="@string/BACK"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />
	
	<View android:layout_width="match_parent"
	    android:layout_alignParentBottom="true"
	    android:layout_height="1dp"
	    android:background="@drawable/sign_in_divider" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSignInForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlSignInTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="0dp"
	android:layout_marginBottom="0dp">

        <LinearLayout
            android:id="@+id/llSignInBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/sign_in_gray"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="2" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ivEmailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/etSignInEmail"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@null"
                    android:src="@drawable/email_icon" />

                <EditText
                    android:id="@+id/etSignInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/ivEmailIcon"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/sign_in_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ivPasswordIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/etSignInPassword"
                    android:layout_marginBottom="3dp"
                    android:contentDescription="@null"
                    android:src="@drawable/password_icon" />

                <EditText
                    android:id="@+id/etSignInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/ivPasswordIcon"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
	    </RelativeLayout>
	    <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/sign_in_divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSignUpBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/sign_in_gray"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="3" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ivUserNameIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/etSignUpName"
                    android:contentDescription="@null"
                    android:src="@drawable/username_icon" />

                <EditText
                    android:id="@+id/etSignUpName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/ivUserNameIcon"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/username"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/sign_in_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ivEmailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/etSignUpEmail"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@null"
                    android:src="@drawable/email_icon" />

                <EditText
                    android:id="@+id/etSignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/ivEmailIcon"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/sign_in_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ivPasswordIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/etSignUpPassword"
                    android:layout_marginBottom="3dp"
                    android:contentDescription="@null"
                    android:src="@drawable/password_icon" />

                <EditText
                    android:id="@+id/etSignUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/ivPasswordIcon"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
	    <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/sign_in_divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llForgotPasswordBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/sign_in_gray"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:visibility="gone"
            android:weightSum="2" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_margin="20dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ivEmailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/etForgotPasswordEmail"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@null"
                    android:src="@drawable/email_icon" />

                <EditText
                    android:id="@+id/etForgotPasswordEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/ivEmailIcon"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
	    <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/sign_in_divider" />
        </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout
	android:id="@+id/bottom_rect_container"
	android:layout_width="match_parent"
	android:layout_height="36dp"
	android:layout_below="@+id/rlSignInForm"
	android:layout_marginLeft="20dp"
	android:layout_marginRight="20dp"
	android:gravity="center_vertical|right"
	android:background="@drawable/bottom_rect" >   

	<Button android:id="@+id/btnForgotPassword"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginRight="5dp"
	    android:background="@null"
	    android:text="@string/forgot_password"
	    android:textColor="@android:color/white" />
	
	<Button
	    android:id="@+id/btnSendPassword"
	    android:layout_width="match_parent"
	    android:layout_height="36dp"
	    android:layout_alignParentRight="true"
	    android:background="@drawable/positiveleftrect"
	    android:gravity="center"
	    android:text="@string/SEND_PASSWORD"
	    android:textColor="@android:color/white"
	    android:textStyle="bold"
	    android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:gravity="center_horizontal"
	android:layout_below="@+id/bottom_rect_container"
	android:padding="10dp">
    
        <Button
            android:id="@+id/btnActive"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_rect_positive_selector"
            android:layout_margin="10dp"
            android:text="@string/SIGN_IN"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnInactive"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_rect_neutral_selector"
            android:layout_margin="10dp"
            android:text="@string/SIGN_UP"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlNoInternetNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlServerField"
        android:visibility="gone" >

        <include layout="@layout/no_internet_notification" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPushNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlServerField"
        android:visibility="gone" >

        <include layout="@layout/push_notification" />
    </RelativeLayout>

</RelativeLayout>
</RelativeLayout>
